--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ brotli = ["async-compression", "async-compression/brotli", "tokio-util"]
 thiserror = "1.0.16"
 serde = "1.0.106"
 bytes = "1"
-tokio = { version = "1.0.1", features = ["rt"] }
+tokio = { version = "1.0.1", features = ["rt", "macros"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
 url = "2.1.1"
 reflection = "0.1.3"
