--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,3 +53,4 @@ serde = { version = "1.0.106", features = ["derive"] }
 tokio = { version = "1.0.1", features = ["full"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream", "server"] }
 serde_bytes = "0.11.4"
+serde_repr = "0.1.7"
