--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
 [dev-dependencies]
 criterion = "0.3.2"
 serde = { version = "1.0.106", features = ["derive"] }
-tokio = { version = "1.0.1", features = ["full"] }
+tokio = { version = "1.0.1", features = ["full", "test-util"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream", "server"] }
 serde_bytes = "0.11.4"
 serde_repr = "0.1.7"
