--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,9 @@ jobs:
     - uses: actions/checkout@v2
     - run: cargo test
     - run: cargo test --all-features
+
+    services:
+      clickhouse:
+        image: yandex/clickhouse-server
+        ports:
+          - 8123:8123
