feat(watch): use `JSONEachRowWithProgress` instead of `RowBinary`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ required-features = ["test-util"]
 debug = true
 
 [features]
-default = ["lz4"]
+default = ["lz4"] # TODO: watch-api + deprecated
 
 test-util = ["hyper/server"]
 
@@ -44,6 +44,7 @@ clickhouse-derive = { version = "0.1.1", path = "derive" }
 
 thiserror = "1.0.16"
 serde = "1.0.106"
+serde_json = "1.0.68"
 bytes = "1"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
@@ -54,7 +55,6 @@ sha-1 = "0.9.1"
 static_assertions = "1.1.0"
 async-compression = { version = "0.3.6", features = ["tokio"], optional = true }
 tokio-util = { version = "0.6.0", default-features = false, features = ["codec", "io"], optional = true }
-take_mut = "0.2.2"
 lz4-sys = { version = "1.9.2", optional = true }
 clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
 
