--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ async-compression = { version = "0.3.6", features = ["tokio"], optional = true }
 tokio-util = { version = "0.6.0", default-features = false, features = ["codec", "io"], optional = true }
 lz4-sys = { version = "1.9.2", optional = true }
 clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
+sealed = "0.3.0"
 
 [dev-dependencies]
 criterion = "0.3.2"
