--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ serde = "1.0.106"
 bytes = "1"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
+hyper-tls = "0.5.0"
 url = "2.1.1"
 smallvec = "1.4.0"
 futures = "0.3.5"
