--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,21 +48,21 @@ brotli = ["async-compression", "async-compression/brotli", "tokio-util"]
 clickhouse-derive = { version = "0.1.1", path = "derive" }
 
 thiserror = "1.0.16"
-serde = "1.0.106"
+serde = {version="1.0.106", features=["derive"]}
 bytes = "1"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
 url = "2.1.1"
 smallvec = "1.4.0"
 futures = "0.3.5"
-sha-1 = { version = "0.9.1", optional = true }
+sha-1 = { version = "0.10.0", optional = true }
 serde_json = { version = "1.0.68", optional = true }
 static_assertions = "1.1.0"
 async-compression = { version = "0.3.6", features = ["tokio"], optional = true }
-tokio-util = { version = "0.6.0", default-features = false, features = ["codec", "io"], optional = true }
+tokio-util = { version = "0.7", default-features = false, features = ["codec", "io"], optional = true }
 lz4-sys = { version = "1.9.2", optional = true }
 clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
-sealed = "0.3.0"
+sealed = "0.4.0"
 
 [dev-dependencies]
 criterion = "0.3.2"
