--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
     - run: rustup component add clippy
     - run: cargo clippy --version
     - run: cargo clippy
+    - run: cargo clippy --no-default-features
     - run: cargo clippy --all-targets --all-features
 
   test:
