--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "clickhouse"
-version = "0.10.0"
+version = "0.10.1"
 description = "A typed client for ClickHouse with killer features"
 keywords = ["clickhouse", "database", "driver", "tokio", "hyper"]
 authors = ["Paul Loyd <pavelko95@gmail.com>"]
@@ -43,7 +43,7 @@ lz4 = ["dep:lz4", "clickhouse-rs-cityhash-sys"]
 clickhouse-derive = { version = "0.1.1", path = "derive" }
 
 thiserror = "1.0.16"
-serde = {version="1.0.106", features=["derive"]}
+serde = {version="1.0.106"}
 bytes = "1"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
