--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     - run: rustup component add clippy
     - run: cargo clippy --version
     - run: cargo clippy
-    - run: cargo clippy --no-default-features
+    - run: cargo clippy --all-targets --no-default-features
     - run: cargo clippy --all-targets --all-features
 
   test:
@@ -41,6 +41,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: cargo test
+    - run: cargo test --no-default-features
     - run: cargo test --all-features
 
     services:
