--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,3 +64,4 @@ tokio = { version = "1.0.1", features = ["full", "test-util"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream", "server"] }
 serde_bytes = "0.11.4"
 serde_repr = "0.1.7"
+function_name = "0.3.0"
