--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,9 @@ debug = true
 default = ["lz4"]
 
 test-util = ["hyper/server"]
-watch = ["sha-1", "serde_json"]
-lz4 = ["dep:lz4", "clickhouse-rs-cityhash-sys"]
+watch = ["dep:sha-1", "serde_json"]
+lz4 = ["dep:lz4", "dep:clickhouse-rs-cityhash-sys"]
+uuid = ["dep:uuid"]
 
 # Temporary workaround for https://github.com/ClickHouse/ClickHouse/issues/37420
 wa-37420 = []
@@ -48,14 +49,14 @@ bytes = "1"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
 url = "2.1.1"
-smallvec = "1.4.0"
 futures = "0.3.5"
+static_assertions = "1.1"
+sealed = "0.3"
 sha-1 = { version = "0.9.1", optional = true }
 serde_json = { version = "1.0.68", optional = true }
-static_assertions = "1.1.0"
 lz4 = { version = "1.23.3", optional = true }
 clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
-sealed = "0.3.0"
+uuid = { version = "1", optional = true }
 
 [dev-dependencies]
 criterion = "0.3.2"
@@ -64,4 +65,5 @@ tokio = { version = "1.0.1", features = ["full", "test-util"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream", "server"] }
 serde_bytes = "0.11.4"
 serde_repr = "0.1.7"
-function_name = "0.3.0"
+uuid = { version = "1", features = ["v4"] }
+function_name = "0.3"
