--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ wa-37420 = []
 clickhouse-derive = { version = "0.1.1", path = "derive" }
 
 thiserror = "1.0.16"
-serde = { version = "1.0.106", features = ["derive"] } # TODO: remove `derive`
+serde = "1.0.106"
 bytes = "1"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
