--- a/release.toml
+++ b/release.toml
@@ -1,6 +1,6 @@
 pre-release-commit-message = "chore: release {{version}}"
 pre-release-replacements = [
-    {file="README.md", search="^clickhouse =(.*)\"[0-9.]+\"", replace="{{crate_name}} =\\1\"{{version}}\""},
+    {file="README.md", search="^clickhouse =(.*)\"[0-9.]+\"", replace="{{crate_name}} =${1}\"{{version}}\""},
     {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
     {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
     {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
