--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ lz4 = { version = "1.23.3", optional = true }
 clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
 uuid = { version = "1", optional = true }
 time = { version = "0.3", optional = true }
+bstr = { version = "1.2", default-features = false }
 
 [dev-dependencies]
 criterion = "0.4.0"
