--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,7 +74,8 @@ tokio = { version = "1.0.1", features = ["full", "test-util"] }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream", "server"] }
 serde_bytes = "0.11.4"
 serde_repr = "0.1.7"
-uuid = { version = "1", features = ["v4"] }
+serde_json = "1.0.68"
+uuid = { version = "1", features = ["v4", "serde"] }
 function_name = "0.3"
 time = { version = "0.3.17", features = ["macros", "rand"] }
 rand = "0.8.5"
