feat!: drop the `wa-37420` feature

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
     - run: cargo test
     - run: cargo test --no-default-features
     - run: cargo test --features uuid,time
+    - run: cargo test --all-features
 
     services:
       clickhouse:
