--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ required-features = ["test-util"]
 debug = true
 
 [features]
-default = ["lz4", "tls"]
+default = ["lz4", "tls", "quanta"]
 
 test-util = ["hyper/server"]
 watch = ["dep:sha-1", "dep:serde_json"]
@@ -42,6 +42,7 @@ lz4 = ["dep:lz4", "dep:clickhouse-rs-cityhash-sys"]
 uuid = ["dep:uuid"]
 time = ["dep:time"]
 tls = ["dep:hyper-tls"]
+quanta = ["dep:quanta"]
 
 [dependencies]
 clickhouse-derive = { version = "0.1.1", path = "derive" }
@@ -63,6 +64,7 @@ clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
 uuid = { version = "1", optional = true }
 time = { version = "0.3", optional = true }
 bstr = { version = "1.2", default-features = false }
+quanta = { version = "0.12", optional = true }
 
 [dev-dependencies]
 criterion = "0.5.0"
