--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ lz4 = ["dep:lz4", "dep:clickhouse-rs-cityhash-sys"]
 uuid = ["dep:uuid"]
 time = ["dep:time"]
 tls = ["dep:hyper-tls"]
+rustls = ["dep:hyper-rustls"]
 quanta = ["dep:quanta"]
 
 [dependencies]
@@ -51,6 +52,7 @@ thiserror = "1.0.16"
 serde = "1.0.106"
 bytes = "1"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
+hyper-rustls = { version = "0.24", features = ["http2"], optional = true }
 hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
 hyper-tls = { version = "0.5.0", optional = true }
 url = "2.1.1"
