--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,15 +34,15 @@ required-features = ["test-util"]
 debug = true
 
 [features]
-default = ["lz4", "tls", "quanta"]
+default = ["lz4", "tls"]
 
 test-util = ["hyper/server"]
+inserter = ["dep:quanta"]
 watch = ["dep:sha-1", "dep:serde_json"]
-lz4 = ["dep:lz4", "dep:clickhouse-rs-cityhash-sys"]
 uuid = ["dep:uuid"]
 time = ["dep:time"]
+lz4 = ["dep:lz4", "dep:clickhouse-rs-cityhash-sys"]
 tls = ["dep:hyper-tls"]
-quanta = ["dep:quanta"]
 
 [dependencies]
 clickhouse-derive = { version = "0.1.1", path = "derive" }
