--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,10 +51,13 @@ thiserror = "1.0.16"
 serde = "1.0.106"
 bytes = "1.5.0"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
-hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream"] }
-hyper-tls = { version = "0.5.0", optional = true }
+http-body-util = "0.1.2"
+hyper = "1.4"
+hyper-util = { version = "0.1.6", features = ["client-legacy", "http1"] }
+hyper-tls = { version = "0.6.0", optional = true }
 url = "2.1.1"
 futures = "0.3.5"
+futures-channel = "0.3.30"
 static_assertions = "1.1"
 sealed = "0.5"
 sha-1 = { version = "0.10", optional = true }
@@ -70,7 +73,7 @@ quanta = { version = "0.12", optional = true }
 criterion = "0.5.0"
 serde = { version = "1.0.106", features = ["derive"] }
 tokio = { version = "1.0.1", features = ["full", "test-util"] }
-hyper = { version = "0.14", features = ["client", "tcp", "http1", "stream", "server"] }
+hyper = { version = "1.1", features = ["server"] }
 serde_bytes = "0.11.4"
 serde_repr = "0.1.7"
 uuid = { version = "1", features = ["v4"] }
