--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -5,6 +5,7 @@ description = "A macro for deriving clickhouse::Row"
 authors = ["Paul Loyd <pavelko95@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+rust-version = "1.67.0" # update `Cargo.toml` and CI if changed
 
 [lib]
 proc-macro = true
