--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ required-features = ["test-util"]
 debug = true
 
 [features]
-default = ["lz4", "tls"]
+default = ["lz4"]
 
 test-util = ["hyper/server"]
 inserter = ["dep:quanta"]
@@ -65,7 +65,7 @@ http-body-util = "0.1.2"
 hyper = "1.4"
 hyper-util = { version = "0.1.6", features = ["client-legacy", "http1"] }
 hyper-tls = { version = "0.6.0", optional = true }
-hyper-rustls = { version = "0.27.2", optional = true }
+hyper-rustls = { version = "0.27.2", features = ["webpki-roots"], optional = true }
 url = "2.1.1"
 futures = "0.3.5"
 futures-channel = "0.3.30"
