--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,8 +51,8 @@ watch = ["dep:sha-1", "dep:serde_json", "serde/derive"]
 uuid = ["dep:uuid"]
 time = ["dep:time"]
 lz4 = ["dep:lz4", "dep:clickhouse-rs-cityhash-sys"]
-tls = ["dep:hyper-tls"]
-rustls = ["dep:hyper-rustls"]
+native-tls = ["dep:hyper-tls"]
+rustls-tls = ["dep:hyper-rustls"]
 
 [dependencies]
 clickhouse-derive = { version = "0.1.1", path = "derive" }
