--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,8 @@ jobs:
     - run: cargo clippy --version
     - run: cargo clippy
     - run: cargo clippy --all-targets --no-default-features
+    - run: cargo build --all-targets --features native-tls
+    - run: cargo build --all-targets --features rustls-tls
     - run: cargo clippy --all-targets --all-features
 
   test:
