--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ uuid = { version = "1", optional = true }
 time = { version = "0.3", optional = true }
 bstr = { version = "1.2", default-features = false }
 quanta = { version = "0.12", optional = true }
+replace_with = { version = "0.1.7" }
 
 [dev-dependencies]
 criterion = "0.5.0"
