--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,10 @@ required-features = ["test-util"]
 name = "clickhouse_cloud"
 required-features = ["rustls-tls"]
 
+[[example]]
+name = "data_types_derive_simple"
+required-features = ["time", "uuid"]
+
 [profile.release]
 debug = true
 
@@ -96,3 +100,4 @@ serde_repr = "0.1.7"
 uuid = { version = "1", features = ["v4"] }
 time = { version = "0.3.17", features = ["macros", "rand"] }
 rand = "0.8.5"
+fixnum = { version = "0.9.2", features = ["serde", "i32", "i64", "i128"] }
