--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,8 @@ time = { version = "0.3", optional = true }
 bstr = { version = "1.2", default-features = false }
 quanta = { version = "0.12", optional = true }
 replace_with = { version = "0.1.7" }
+lazy_static = "1.5.0" # 可以删除
+prometheus = "0.13.4"
 
 [dev-dependencies]
 criterion = "0.5.0"
