--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ inserter = ["dep:quanta"]
 watch = ["dep:sha-1", "dep:serde_json", "serde/derive"]
 uuid = ["dep:uuid"]
 time = ["dep:time"]
-lz4 = ["dep:lz4_flex", "dep:clickhouse-rs-cityhash-sys"]
+lz4 = ["dep:lz4_flex", "dep:cityhash-rs"]
 native-tls = ["dep:hyper-tls"]
 rustls-tls = ["dep:hyper-rustls"]
 
@@ -79,7 +79,7 @@ sealed = "0.5"
 sha-1 = { version = "0.10", optional = true }
 serde_json = { version = "1.0.68", optional = true }
 lz4_flex = { version = "0.11.3", default-features = false, features = ["std"], optional = true }
-clickhouse-rs-cityhash-sys = { version = "0.1.2", optional = true }
+cityhash-rs = { version = "=1.0.1", optional = true } # exact version for safety
 uuid = { version = "1", optional = true }
 time = { version = "0.3", optional = true }
 bstr = { version = "1.2", default-features = false }
