--- a/release.toml
+++ b/release.toml
@@ -7,4 +7,4 @@ pre-release-replacements = [
     {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
     {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/ClickHouse/clickhouse-rs/compare/{{tag_name}}...HEAD", exactly=1},
 ]
-allow-branch = ["master"]
+allow-branch = ["main"]
