--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,10 @@ required-features = ["test-util"]
 name = "clickhouse_cloud"
 required-features = ["rustls-tls"]
 
+[[example]]
+name = "data_types_derive_simple"
+required-features = ["time", "uuid"]
+
 [profile.release]
 debug = true
 
@@ -107,4 +111,5 @@ serde_json = "1"
 serde_repr = "0.1.7"
 uuid = { version = "1", features = ["v4", "serde"] }
 time = { version = "0.3.17", features = ["macros", "rand"] }
+fixnum = { version = "0.9.2", features = ["serde", "i32", "i64", "i128"] }
 rand = { version = "0.8.5", features = ["small_rng"] }
