--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,9 +55,9 @@ jobs:
     - run: cargo clippy --version
     - run: cargo clippy
     - run: cargo clippy --all-targets --no-default-features
-    - run: cargo build --all-targets --features native-tls
-    - run: cargo build --all-targets --features rustls-tls
-    - run: cargo build --all-targets --features rustls-tls-aws
+    - run: cargo clippy --all-targets --features native-tls
+    - run: cargo clippy --all-targets --features rustls-tls
+    - run: cargo clippy --all-targets --features rustls-tls-aws
     - run: cargo clippy --all-targets --all-features
 
   test:
