--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ rustls-tls-native-roots = ["dep:rustls", "dep:hyper-rustls", "hyper-rustls?/nati
 clickhouse-derive = { version = "0.2.0", path = "derive" }
 
 thiserror = "1.0.16"
-serde = "1.0.106"
+serde = {version="1.0.106",features=["derive"]}
 bytes = "1.5.0"
 tokio = { version = "1.0.1", features = ["rt", "macros"] }
 http-body-util = "0.1.2"
