--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,10 +85,10 @@ hyper = "1.4"
 hyper-util = { version = "0.1.6", features = ["client-legacy", "http1"] }
 hyper-tls = { version = "0.6.0", optional = true }
 rustls = { version = "0.23", default-features = false, optional = true }
-hyper-rustls = { version = "0.27.2", default-features = false, features = [
+hyper-rustls = { version = "=0.27.2", default-features = false, features = [
     "http1",
     "tls12",
-], optional = true }
+], optional = true } # 0.27.3+ is Rust 1.71+ only
 url = "2.1.1"
 futures = "0.3.5"
 futures-channel = "0.3.30"
@@ -102,7 +102,7 @@ lz4_flex = { version = "0.11.3", default-features = false, features = [
 cityhash-rs = { version = "=1.0.1", optional = true } # exact version for safety
 uuid = { version = "1", optional = true }
 time = { version = "0.3", optional = true }
-bstr = { version = "=1.10.0", default-features = false }
+bstr = { version = "=1.10.0", default-features = false } # 1.11.0+ is Rust 1.73+ only
 quanta = { version = "0.12", optional = true }
 replace_with = { version = "0.1.7" }
 
