--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
   RUSTFLAGS: -Dwarnings
   RUSTDOCFLAGS: -Dwarnings
   RUST_BACKTRACE: 1
-  MSRV: 1.70.0
+  MSRV: 1.73.0
 
 jobs:
   build:
@@ -77,7 +77,7 @@ jobs:
 
     services:
       clickhouse:
-        image: clickhouse/clickhouse-server
+        image: clickhouse/clickhouse-server:24.10-alpine
         ports:
           - 8123:8123
 
