--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,12 @@ jobs:
     - run: rustup toolchain install ${{ env.MSRV }} --profile minimal
     - run: rustup override set ${{ env.MSRV }}
     - run: rustup show active-toolchain -v
+    - run: cargo update -p native-tls --precise 0.2.13 # 0.2.14 requires rustc 1.80
+    - run: cargo update -p litemap --precise 0.7.4 # 0.7.5 requires rustc 1.81
+    - run: cargo update -p zerofrom --precise 0.1.5 # 0.1.6 requires rustc 1.81
     - run: cargo build
     - run: cargo build --no-default-features
     - run: cargo build --features uuid,time,chrono
-    - run: cargo update -p native-tls --precise 0.2.13 # 0.2.14 requires rustc 1.80
     - run: cargo build --all-features
 
   rustfmt:
