--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,7 +98,7 @@ rustls-tls-native-roots = [
 
 [dependencies]
 clickhouse-derive = { version = "0.2.0", path = "derive" }
-
+clickhouse-rowbinary = { version = "*", path = "rowbinary" }
 thiserror = "1.0.16"
 serde = "1.0.106"
 bytes = "1.5.0"
