--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "clickhouse-rowbinary"
+name = "clickhouse-types"
 version = "0.0.1"
-description = "Native and RowBinary(WithNamesAndTypes) format utils"
+description = "Data types utils to use with Native and RowBinary(WithNamesAndTypes) formats in ClickHouse"
 authors = ["ClickHouse"]
 repository = "https://github.com/ClickHouse/clickhouse-rs"
 homepage = "https://clickhouse.com"
