--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
 name = "clickhouse-types"
-version = "0.1.0"
 description = "Data types utils to use with Native and RowBinary(WithNamesAndTypes) formats in ClickHouse"
-authors = ["ClickHouse"]
-repository = "https://github.com/ClickHouse/clickhouse-rs"
-homepage = "https://clickhouse.com"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-# update `Cargo.toml` and CI if changed
-rust-version = "1.73.0"
+version = "0.1.0"
 
-[lib]
-#proc-macro = true
+authors.workspace = true
+repository.workspace = true
+homepage.workspace = true
+edition.workspace = true
+license.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 thiserror = "1.0.16"
